# django-react-docker

./: pyproject.toml
API/: Dockerfile
API/APIProject/: settings.py  urls.py
API/djangosite/: settings.py
djangosite/: settings.py
