[tool.poetry]
name = "django-react-docker"
version = "0.1.0"
description = ""
authors = ["Travers La Ville <traverslaville@gmail.com>"]
readme = "README.md"
packages = [{include = "django_react_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
